--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,38 @@
 .env.production
 .env.development
 
+# ============================================================================
+# TERRAFORM FILES - IMPORTANTE PARA SEGURIDAD
+# ============================================================================
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# Crash log files
+crash.log
+crash.*.log
+
+# Exclude all .tfvars files, which are likely to contain sensitive data
+*.tfvars
+*.tfvars.json
+!terraform.tfvars.example
+
+# Ignore override files as they are usually used to override resources locally
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
+*tfplan*
+
+# Ignore CLI configuration files
+.terraformrc
+terraform.rc
+
 # Archivos de configuración con datos sensibles
 **/appsettings.Production.json
 **/appsettings.Local.json
