--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -1,6 +1,20 @@
 # ============================================================================
 # GITHUB ACTIONS WORKFLOW - INFRAESTRUCTURA TERRAFORM
-# ============================================================================
+# =======================================================    - name: 📥 Import Existing Resources
+      run: |
+        cd terraform
+        # Intentar importar recursos existentes (ignorar errores si no existen)
+        terraform import google_sql_database_instance.babysitter_db_instance ${{ secrets.GCP_PROJECT_ID }}/babysitter-app-db-instance || true
+        terraform import google_artifact_registry_repository.babysitter_repo projects/${{ secrets.GCP_PROJECT_ID }}/locations/us-central1/repositories/babysitter-app-repo || true
+        echo "✅ Import completed (existing resources handled)"
+        
+    - name: 📋 Generate Fresh Plan
+      run: |
+        cd terraform
+        terraform plan -out=tfplan
+        echo "✅ Fresh plan generated after import"
+        
+    - name: 🚀 Terraform Apply======
 # Automatiza el deployment de infraestructura en Google Cloud Platform
 # usando Terraform cuando hay cambios en la rama main
 
@@ -165,7 +179,7 @@ jobs:
     name: 🚀 Deploy Infrastructure
     runs-on: ubuntu-latest
     needs: plan
-    if: github.ref == 'refs/heads/main' && (needs.plan.outputs.tfplanExitCode == 2 || needs.plan.outputs.tfplanExitCode == 0 || github.event.inputs.action == 'apply')
+    if: github.ref == 'refs/heads/main' || github.event.inputs.action == 'apply'
     environment: production
     
     steps:
